Update all schemas & added backend logic for inListMedias
